<!-- Copyright 2018 Google Inc.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">cabuslay_exer4_SlamBook</string>
    <!-- Break paragraphs without extra spacing, by putting \n at the beginning of next line.-->
    <string name="bio">Hi, my name is Aleks.
\n\nI love fish.
\n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
\nFun fact is that I have several aquariums and also a river.
\n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
\nAnd sometimes I even go fishing.
\nAnd even less sometimes, I actually catch something.
\n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
\n\nI\'ll be happy to teach you how to make your own aquarium.
\nYou should ask someone else about fishing, though.\n\n</string>
    <string name="name_enter">Enter Name</string>
    <string name="nickname_enter">Enter Nickname</string>
    <string name="age_enter">Enter Age</string>
    <string name="birthday_enter">Enter Birthday</string>
    <string name="phone_enter">Enter Phone Number</string>
    <string name="color_enter">Enter Favorite Color</string>
    <string name="course_enter">Enter Course</string>
    <string name="dream_enter">Enter Dream</string>
    <string name="crush_enter">Enter Name of Crush</string>

    <string name="done">Done</string>
    <string name="hello_label">Hello!</string>
    <string name="thanks">Thank you for answering!</string>

    <string name="name_label">Name</string>
    <string name="nickname_label">Nickname</string>
    <string name="age_label">Age</string>
    <string name="birthday_label">When is your birthday?</string>
    <string name="phone_label">Phone number</string>
    <string name="color_label">What is your favorite color?</string>
    <string name="course_label">What is your course?</string>
    <string name="dream_label">What is your ultimate dream?</string>
    <string name="crush_label">Who is your secret crush?</string>
    <string name="message_label">What is your message for me?</string>
</resources>
