<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2018 Google Inc.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="myInfo"
            type="com.example.android.aboutme.MyInfo" />
    </data>


    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding">

            <TextView
                android:id="@+id/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/hello_label"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/name_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.name}"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/nickname_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.nickname}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/age_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.age}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/birthday_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.birthday}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/phone_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.phone}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/color_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.color}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/course_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.course}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/dream_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.dream}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/crush_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.crush}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/message_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={myInfo.message}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/thank_you"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/thanks"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_label" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_enter"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/nickname_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickname_label" />

            <EditText
                android:id="@+id/nickname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname_enter"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/age_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_label" />

            <EditText
                android:id="@+id/age_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_enter"
                android:inputType="number" />

            <TextView
                android:id="@+id/birthday_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday_label" />

            <EditText
                android:id="@+id/birthday_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday_enter"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_label" />

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_enter"
                android:inputType="phone" />

            <TextView
                android:id="@+id/color_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_label" />

            <EditText
                android:id="@+id/color_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color_enter"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/course_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_label" />

            <EditText
                android:id="@+id/course_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_enter"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/dream_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dream_label" />

            <EditText
                android:id="@+id/dream_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dream_enter"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/crush_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crush_label" />

            <EditText
                android:id="@+id/crush_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crush_enter"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/message_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_label" />

            <EditText
                android:id="@+id/message_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/done"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

</layout>